...
    
    let sloganNosionLabel = CustomLabels().sloganLabel
    let transitionButton = CustomButtons().segueButton
    
    let nameTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = "Press your name"
        textField.backgroundColor = .white
        textField.textColor = .black
        textField.textAlignment = .center
        textField.borderStyle = .line
        textField.clipsToBounds = true
        textField.layer.borderWidth = 2
...
